<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">Все мойки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Список пунктов в меню-->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_filter">Фильтр</string>
    <string name="action_show_list">Лист</string>
    <string name="action_show_map">Карта</string>
    <string name="login_admin">Вход для администратора</string>
    <string name="filters">Фильтры</string>
    <string name="reservation">Запись на мойку</string>
    <string name="reviews">Отзывы</string>
    <string name="my_car_edit"></string>
    <string name="current_reservation_title">Текущая запись</string>

    <!--Названия кнопок-->
    <string name="reserve">ЗАПИСАТЬСЯ НА МОЙКУ</string>
    <string name="confirm">ПОДТВЕРДИТЬ</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="publish">ОПУБЛИКОВАТЬ</string>
    <string name="reload">ПЕРЕЗАГРУЗИТЬ</string>
    <string name="reserve_now">ЗАБРОНИРОВАТЬ!</string>
    <string name="next">ПРОДОЛЖИТЬ</string>
    <string name="next_without_registration">ПРОДОЛЖИТЬ БЕЗ РЕГИСТРАЦИИ</string>
    <string name="admin">АДМИНИСТРАТОР</string>
    <string name="welcome">Для дальнейшей работы с приложением нажмите ПРОДОЛЖИТЬ</string>
    <string name="filter_clear">ОЧИСТИТЬ</string>
    <string name="filter_search">ПРИМЕНИТЬ</string>
    <string name="current_reservation">ТЕКУЩАЯ ЗАПИСЬ</string>
    <string name="call">ПОЗВОНИТЬ</string>
    <string name="cancel">ОТКАЗАТЬСЯ</string>

    <!--Заголовки-->
    <string name="services">Услуги</string>
    <string name="actions">Акции</string>
    <string name="reserved">Вы записаны на автомойку</string>

    <!-- Placeholders -->
    <string name="your_name">Ваше имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone">Телефон</string>
    <string name="car_mark">Марка автомобиля</string>
    <string name="registration_number">Госномер</string>
    <string name="review_text">Текст отзыва</string>

    <!-- Типы кузовов -->
    <string name="mini">Мини</string>
    <string name="sedan">Седан</string>
    <string name="suv">Внедорожник</string>
    <string name="minibus">Микроавтобус</string>

    <!--Заголовки диалоговых окошек-->
    <string name="create_review">Оставьте отзыв</string>

    <!--Текст label-->
    <string name="body_type">Тип кузова</string>
    <string name="set_mark">Оценить</string>
    <string name="reserve_data">Данные заказчика</string>
    <string name="schedule">Расписание</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="seep_bar_title_radius">Радиус отображения моек</string>
    <string name="filter_label_rating">Рейтинг</string>
    <string name="filter_label_coast">Цена</string>

    <!-- Дни недели -->
    <string name="pn">ПН</string>
    <string name="vt">ВТ</string>
    <string name="cp">СР</string>
    <string name="cht">ЧТ</string>
    <string name="pt">ПТ</string>
    <string name="cb">СБ</string>
    <string name="vc">ВС</string>
</resources>
