<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        app:showAsAction="always"
        android:title="@string/action_show_filter"
        android:icon="@drawable/ic_filter_white_24dp"
        android:id="@+id/show_filter"/>

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_card_white_24dp"
        android:title="@string/action_show_list"
        android:id="@+id/show_list"/>

    <item
        android:icon="@drawable/ic_pin_drop_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_show_map"
        android:id="@+id/show_map"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
