<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="@dimen/my_car_edit_line_height">

        <com.sequenia.autoservices.widgets.ModernhMediumTextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            style="@style/BigEditTextLabel"/>

        <com.sequenia.autoservices.widgets.ModernhMediumEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:gravity="center"
            style="@style/EditText.Big"
            android:hint="@string/your_name"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="@dimen/my_car_edit_line_height">

        <com.sequenia.autoservices.widgets.ModernhMediumTextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            style="@style/BigEditTextLabel"/>

        <com.sequenia.autoservices.widgets.PhoneEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:gravity="center"
            style="@style/EditText.Big"
            android:hint="@string/phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="@dimen/my_car_edit_line_height">

        <com.sequenia.autoservices.widgets.ModernhMediumTextView
            android:id="@+id/car_mark_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_mark"
            style="@style/BigEditTextLabel"/>

        <com.sequenia.autoservices.widgets.CarMarkSpinner
            android:id="@+id/car_mark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:gravity="center"
            android:background="@drawable/edit_text_bg"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="@dimen/my_car_edit_line_height">

        <com.sequenia.autoservices.widgets.ModernhMediumTextView
            android:id="@+id/car_registration_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_number"
            style="@style/BigEditTextLabel"/>

        <com.sequenia.autoservices.widgets.ModernhMediumEditText
            android:id="@+id/car_registration_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:gravity="center"
            style="@style/EditText.Big"
            android:hint="@string/registration_number"/>

    </LinearLayout>

</LinearLayout>