<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_padding">

        <auto_services.sequenia.com.autoservices.widgets.ModernhBoldTextView
            android:id="@+id/car_wash_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewHeader.Big"/>

        <auto_services.sequenia.com.autoservices.widgets.ModernhMediumTextView
            android:id="@+id/car_wash_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewGrey.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/GreyElement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_list_item_height">

        <LinearLayout
            android:layout_width="@dimen/material_menu_item_height"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_grey600_24dp"
                android:layout_width="@dimen/material_icon_size"
                android:layout_height="@dimen/material_icon_size" />

        </LinearLayout>

        <auto_services.sequenia.com.autoservices.widgets.ModernhMediumTextView
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewGrey"
            android:text="@string/reserve_data"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/material_padding"
        android:paddingLeft="@dimen/material_padding"
        android:paddingTop="@dimen/material_padding_between_row"
        android:paddingBottom="@dimen/material_padding_between_row">

        <auto_services.sequenia.com.autoservices.widgets.ModernhMediumEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:hint="@string/your_name"
            style="@style/EditText"/>

        <auto_services.sequenia.com.autoservices.widgets.ModernhMediumEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_edit_text_height"
            android:hint="@string/phone"
            style="@style/EditText"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <auto_services.sequenia.com.autoservices.widgets.SpinnerWithLabel
                android:id="@+id/car_mark"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="@dimen/material_edit_text_height"
                android:gravity="center"
                android:layout_marginRight="@dimen/material_padding_between_row"
                android:background="@drawable/edit_text_bg"/>

            <auto_services.sequenia.com.autoservices.widgets.ModernhMediumEditText
                android:id="@+id/car_registration_number"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_edit_text_height"
                android:hint="@string/registration_number"
                style="@style/EditText"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <auto_services.sequenia.com.autoservices.widgets.ModernhMediumTextView
                android:id="@+id/body_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_type"
                android:textColor="@color/black87"
                android:textSize="@dimen/sp16"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/material_edit_text_line_margin"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/body_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_edit_text_height"
                android:background="@drawable/edit_text_bg"
                android:layout_weight="2"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/GreyElement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_list_item_height">

        <LinearLayout
            android:layout_width="@dimen/material_menu_item_height"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/ic_schedule_grey600_24dp"
                android:layout_width="@dimen/material_icon_size"
                android:layout_height="@dimen/material_icon_size" />

        </LinearLayout>

        <auto_services.sequenia.com.autoservices.widgets.ModernhMediumTextView
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextViewGrey"
            android:text="@string/schedule"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedule_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>